--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .idea/
-server/dist/
-client/build/
-client/.env
-server/.env
-server/logs
-server/.data/
-server/.data/
+.dist
+.env
+.logs
+.data
