change git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,12 @@
 .env.test.local
 .env.production.local
 
+.env
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .idea/
-.dist
-.env
-.logs
+dist/
+logs/
 .data
