--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "@nestjs/cli": "10.1.11",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.1.3",
+    "@types/babel__generator": "^7.6.8",
+    "@types/babel__template": "^7.4.4",
     "@types/bcryptjs": "2.4.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "4.17.17",
@@ -113,7 +115,7 @@
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
     "tslib": "2.6.1",
-    "typescript": "5.1.6"
+    "typescript": "^5.4.2"
   },
   "jest": {
     "moduleFileExtensions": [
